--- a/src/app/uploads/upload-detail/upload-detail.component.html
+++ b/src/app/uploads/upload-detail/upload-detail.component.html
@@ -1,1 +1,2 @@
-{{upload.name}} | <button (click)='deleteUpload(upload)'>Delete</button><br>
+<strong>{{upload.name}}</strong>
+<button (click)='deleteUpload(upload)' class="btn btn-danger btn-sm">Delete</button><br>
