--- a/src/app/items/item-form/item-form.component.html
+++ b/src/app/items/item-form/item-form.component.html
@@ -1,26 +1,39 @@
 <h3>New Task Form</h3>
 
-<div>
-  <label>Name: </label>
-  <input placeholder="Item Title" class="form-control"
-  [(ngModel)]="item.title"
-  required minlength="2" maxlength="23"
-  #title='ngModel'>
+<div class='form-group'>
+  <fieldset>
+    <label class="control-label">Name: </label>
 
-  <div *ngIf="title.dirty || title.touched">
-    <p *ngIf='title.errors; then errors else valid'>template renders here...</p>
-  </div>
+    <input placeholder="Item Title" class="form-control"
+    [(ngModel)]="item.title"
+    required minlength="2" maxlength="23"
+    #title='ngModel'>
 
-  <br>
-  <label>Body: </label>
-  <textarea  placeholder="Item Body" class="form-control"
-  [(ngModel)]="item.body"
-  required minlength="2" maxlength="23"
-  #body='ngModel'>
-  </textarea>
-  <br>
-  <button (click)='createItem()' [disabled]="!title.valid || !body.valid">Create</button>
+    <div *ngIf="title.dirty">
+      <span *ngIf='title.errors; then errors else valid'>template renders here...</span>
+    </div>
+
+    <!-- <br>
+    <label class="control-label">Body</label>
+    <textarea  placeholder="Item Body" class="form-control" rows="5"
+    [(ngModel)]="item.body"
+    required minlength="5" maxlength="200"
+    #body='ngModel'>
+    </textarea>
+
+    <div *ngIf="body.dirty">
+      <span *ngIf='body.errors; then errors else valid'>template renders here...</span>
+    </div> -->
+
+
+    <button class="btn btn-primary" (click)='createItem()' [disabled]="!title.valid">Create</button>
+  </fieldset>
 </div>
 
-<ng-template #valid>looks good!</ng-template>
-<ng-template #errors>form contains errors!</ng-template>
+<ng-template #valid>
+  <p class="text-success">looks good!</p>
+</ng-template>
+
+<ng-template #errors>
+  <p class="text-danger">form contains errors!</p>
+</ng-template>
