--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import "./styles/loading.scss";
+@import "./styles/materia.scss";
+@import "./styles/firestarter.scss";
