--- a/src/app/uploads/upload-form/upload-form.component.html
+++ b/src/app/uploads/upload-form/upload-form.component.html
@@ -1,10 +1,8 @@
-<h3>Single or Multiple File Uploads</h3>
-
 <div class="card card-outline-primary">
   <div class="card-block">
 
 
-    <label class="btn btn-default btn-file">
+    <label>
        <input type="file" (change)="detectFiles($event)">
     </label>
 
@@ -15,7 +13,7 @@
       Upload Single
     </button>
 
-    <label class="btn btn-default btn-file">
+    <label>
        <input type="file" (change)="detectFiles($event)" multiple>
     </label>
 
