--- a/src/app/users/user-profile/user-profile.component.html
+++ b/src/app/users/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
     <div class="card-block" *ngIf="auth.currentUser">
       <h3 class="card-title">Howdy, {{ auth.currentUserDisplayName }}</h3>
       <img class="card-img-top" [src]="auth.currentUser.photoURL || 'https://api.adorable.io/avatars/109/fire.png'" width=50px>
-      <p class="card-text">This is my profile</p>
+      <p class="card-text text-sm">UID: {{ auth.currentUserId }}</p>
       <button class="btn btn-secondary" (click)="logout()">Logout</button>
    </div>
 
