--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+// @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import "./styles/loading.scss";
 @import "./styles/materia.scss";
 @import "./styles/firestarter.scss";
