--- a/src/app/ui/top-nav/top-nav.component.html
+++ b/src/app/ui/top-nav/top-nav.component.html
@@ -5,7 +5,7 @@
    </button>
 
   <a class="navbar-brand" routerLink="/">
-    <i class="fa fa-fire"></i> FireStarter
+    <img src="assets/images/angularfirebase.png" width="30px" /> FireStarter
   </a>
 
   <!-- [class.show]="collapse==open" -->
