--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -31,6 +31,6 @@
 
 <ng-template #alreadyLoggedIn>
   <p class="text-success">
-    Alerady logged in!
+    Already logged in!
   </p>
 </ng-template>
