--- a/src/app/items/items-list/items-list.component.html
+++ b/src/app/items/items-list/items-list.component.html
@@ -4,9 +4,11 @@
   <item-detail [item]='item'></item-detail>
 </div>
 
+<loading-spinner></loading-spinner>
 
 
-<button type="button" class="btn btn-danger" (click)='deleteItems()'>Delete Entire List</button>
+
+<button type="button" class="button is-danger" (click)='deleteItems()'>Delete Entire List</button>
 
 <hr>
 
