--- a/src/app/ui/footer-nav/footer-nav.component.html
+++ b/src/app/ui/footer-nav/footer-nav.component.html
@@ -1,5 +1,3 @@
-<footer class="footer sticky-bottom">
-  <div class="container text-center">
+<footer class="footer">
     Angular 4 + Firebase Starter App -- Build me from scratch at <a href="https://angularfirebase.com">AngularFirebase</a>
-  </div>
 </footer>
