--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -3,19 +3,19 @@
   <h3>Social Login</h3>
 
 
-    <button (click)="signInWithGoogle()" class="btn btn-social btn-block btn-google">
+    <button (click)="signInWithGoogle()" class="button  btn-social btn-google">
       <i class="fa fa-google-plus fa-lg"></i> Connect Google
     </button>
 
-    <button (click)="signInWithGithub()" class="btn btn-social btn-block btn-github" disabled>
+    <button (click)="signInWithGithub()" class="button btn-social btn-github" disabled>
       <i class="fa fa-github fa-lg"></i> Connect GitHub
     </button>
 
-    <button (click)="signInWithFacebook()" class="btn btn-social btn-block btn-facebook" disabled>
+    <button (click)="signInWithFacebook()" class="button  btn-social btn-facebook" disabled>
       <i class="fa fa-facebook fa-lg"></i> Connect Facebook
     </button>
 
-    <button (click)="signInWithTwitter()" class="btn btn-social btn-block btn-twitter" disabled>
+    <button (click)="signInWithTwitter()" class="button  btn-social btn-twitter" disabled>
       <i class="fa fa-twitter fa-lg"></i> Connect Twitter
     </button>
 
@@ -23,7 +23,7 @@
 
     <h3>Anonymous Login</h3>
 
-      <button (click)="signInAnonymously()" class="btn btn-block btn-secondary">
+      <button (click)="signInAnonymously()" class="button button-info">
         <i class="fa fa-user-secret fa-lg"></i> Connect Anonymously
       </button>
 
