--- a/src/app/uploads/upload-form/upload-form.component.html
+++ b/src/app/uploads/upload-form/upload-form.component.html
@@ -1,37 +1,38 @@
 <div *ngIf="currentUpload">
-  <div class="progress">
-    <div class="progress-bar progress-bar-animated" [ngStyle]="{ 'width': currentUpload?.progress + '%' }"></div>
-  </div>
+    <progress class="progress is-success" min=1 max=100 value="{{ currentUpload?.progress }}"></progress>
 
-  Progress: {{currentUpload?.name}} | {{currentUpload?.progress}}% Complete
+    Progress: {{currentUpload?.name}} | {{currentUpload?.progress}}% Complete
 </div>
 
 
-<div class="card card-outline-primary">
-  <div class="card-block">
+<div class="box">
 
+  <h3>Single File Upload</h3>
 
     <label>
-       <input type="file" (change)="detectFiles($event)">
+       <input type="file" class="button" (change)="detectFiles($event)">
     </label>
 
-    <button class="btn btn-primary"
+    <button class="button is-primary"
             [disabled]="!selectedFiles"
             (click)="uploadSingle()">
 
       Upload Single
     </button>
 
+    <hr>
+
+    <h3>Multiple File Upload</h3>
+
     <label>
-       <input type="file" (change)="detectFiles($event)" multiple>
+       <input type="file" class="button" (change)="detectFiles($event)" multiple>
     </label>
 
 
-      <button class="btn btn-primary"
+      <button class="button is-primary"
               [disabled]="!selectedFiles"
               (click)="uploadMulti()">
 
         Upload Multiple
       </button>
-  </div>
 </div>
