--- a/src/app/users/user-form/user-form.component.html
+++ b/src/app/users/user-form/user-form.component.html
@@ -6,24 +6,25 @@
   <hr>
 
   <label for="email">Email</label>
-  <input type="email" id="email" class="form-control"
+  <input type="email" id="email" class="input"
          formControlName="email" required >
 
-  <div *ngIf="formErrors.email" class="alert alert-danger">
+  <div *ngIf="formErrors.email" class="notification is-danger">
     {{ formErrors.email }}
   </div>
 
   <label for="password">Password</label>
-  <input type="password" id="password" class="form-control"
+  <input type="password" id="password" class="input"
          formControlName="password" required >
 
-  <div *ngIf="formErrors.password" class="alert alert-danger">
+  <div *ngIf="formErrors.password" class="notification is-danger">
     {{ formErrors.password }}
   </div>
 
-  <button type="submit" class="btn btn-block btn-primary" [disabled]="!userForm.valid">Submit</button>
+  <div *ngIf="userForm.valid" class="notification is-success">Form is valid</div>
+  <button type="submit" class="button" [disabled]="!userForm.valid">Submit</button>
 
-  <span *ngIf="userForm.valid" class="text-success">Form is valid</span>
+
 
 
 </form>
@@ -36,24 +37,24 @@
   <hr>
 
   <label for="email">Email</label>
-  <input type="email" id="email" class="form-control"
+  <input type="email" id="email" class="input"
          formControlName="email" required >
 
-  <div *ngIf="formErrors.email" class="alert alert-danger">
+  <div *ngIf="formErrors.email" class="help is-danger">
     {{ formErrors.email }}
   </div>
 
   <label for="password">Password</label>
-  <input type="password" id="password" class="form-control"
+  <input type="password" id="password" class="input"
          formControlName="password" required >
 
-  <div *ngIf="formErrors.password" class="alert alert-danger">
+  <div *ngIf="formErrors.password" class="help is-danger">
     {{ formErrors.password }}
   </div>
 
   <button type="submit" class="btn btn-block btn-primary" [disabled]="!userForm.valid">Submit</button>
 
-  <span *ngIf="userForm.valid" class="text-success">Form Looks Valid</span>
+  <span *ngIf="userForm.valid" class="help is-success">Form Looks Valid</span>
 
   <p *ngIf="!passReset && userForm.controls.email.valid" class="btn btn-sm btn-secondary" (click)="resetPassword()">Reset Password for {{userForm.value.email}}?</p>
   <p *ngIf="passReset" class="text-warning">Reset requested. Check your email instructions.</p>
