feat: loading spinner

--- a/src/app/items/items-list/items-list.component.html
+++ b/src/app/items/items-list/items-list.component.html
@@ -4,7 +4,7 @@
   <item-detail [item]='item'></item-detail>
 </div>
 
-<loading-spinner></loading-spinner>
+<loading-spinner *ngIf="showSpinner"></loading-spinner>
 
 
 
