--- a/src/app/ui/readme-page/readme-page.component.html
+++ b/src/app/ui/readme-page/readme-page.component.html
@@ -1,6 +1,8 @@
 <h1><a id="FireStarter__Angular4__Firebase_Starter_App_0"></a>FireStarter - Angular4 + Firebase Starter App</h1>
 <p>FireStarter is designed to handle the basic features most Angular+Firebase apps need. It can serve as a foundation to quickly roll out more complex features.</p>
-<h2><a id="Features_4"></a>Features</h2>
+<p><a href="https://firestarter-96e46.firebaseapp.com/">Live Demo</a><br>
+<a href="https://angularfirebase.com">Lessons and Screencasts</a></p>
+<h2><a id="Features_7"></a>Features</h2>
 <ul>
 <li>Authentication w/ Router Guard</li>
 <li>Realtime Database CRUD Demo</li>
@@ -8,7 +10,7 @@
 <li>SASS + Bulma + FontAwesome</li>
 <li>Reactive Form Validation</li>
 </ul>
-<h2><a id="Usage_12"></a>Usage</h2>
+<h2><a id="Usage_15"></a>Usage</h2>
 <p>Create an account at <a href="https://firebase.google.com/">https://firebase.google.com/</a></p>
 <ul>
 <li><code>git clone https://github.com/codediodeio/angular-firestarter.git firestarter</code></li>
@@ -16,7 +18,7 @@
 <li><code>npm install</code></li>
 </ul>
 <p>Create the environment files below in <code>src/environments/</code>.</p>
-<h4><a id="environmentts_22"></a>environment.ts</h4>
+<h4><a id="environmentts_25"></a>environment.ts</h4>
 <pre><code class="language-typescript"><span class="hljs-keyword">export</span> <span class="hljs-keyword">const</span> environment = {{'{'}}
   production: <span class="hljs-literal">false</span>,
   firebaseConfig: {{'{'}}
@@ -36,7 +38,8 @@
 {{'}'}};
 </code></pre>
 <p>And finally <code>ng serve</code></p>
-<h2><a id="Apps_Using_FireStarter_in_Production_46"></a>Apps Using FireStarter in Production</h2>
+<h2><a id="Apps_Using_FireStarter_in_Production_49"></a>Apps Using FireStarter in Production</h2>
 <ul>
 <li><a href="https://app.artifilter.com">ArtiFilter</a> - Neural Art Generator</li>
+<li><a href="https://flashlawyer.com">FlashLawyer</a> - Legal Document Builder and Chatbot</li>
 </ul>
