--- a/src/app/ui/top-nav/top-nav.component.html
+++ b/src/app/ui/top-nav/top-nav.component.html
@@ -1,32 +1,4 @@
-<!-- <nav class="navbar  navbar-light">
-    <button (click)="toggleCollapse()" class="navbar-toggler navbar-toggler-right" type="button">
-      <span [hidden]="collapse=='open'" class="fa fa-bars fa-lg"></span>
-      <span [hidden]="collapse=='closed'" class="fa fa-times fa-lg"></span>
-   </button>
-
-  <a class="navbar-brand" routerLink="/">
-    <img src="assets/images/angularfirebase.png" width="30px" /> FireStarter
-  </a>
-
-
-    <div class="collapse show"  [@collapse]="collapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/items">Items (Realtime DB Example)</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/uploads">Uploads (File Upload Example)</a>
-        </li>
-      </ul>
-    </div>
-  </nav> -->
-
-
-
-  <nav class="nav">
+<nav class="nav">
   <div class="nav-left">
     <a class="nav-item" routerLink="/">
       <img src="assets/images/angularfirebase.png" width="30px" alt="Firestarter Angular4 Demo App"/> FireStarter
@@ -37,6 +9,11 @@
     <a class="nav-item" href="https://github.com/codediodeio/angular-firestarter">
       <span class="icon">
         <i class="fa fa-github"></i>
+      </span>
+    </a>
+    <a class="nav-item" href="https://www.youtube.com/channel/UCsBjURrPoezykLs9EqgamOA">
+      <span class="icon">
+        <i class="fa fa-youtube"></i>
       </span>
     </a>
     <a class="nav-item" href="https://twitter.com/angularfirebase">
