--- a/src/app/items/item-form/item-form.component.html
+++ b/src/app/items/item-form/item-form.component.html
@@ -12,7 +12,7 @@
     </div>
 
 
-    <button class="button" (click)='createItem()' [disabled]="!title.valid">Create</button>
+    <button class="button is-primary" (click)='createItem()' [disabled]="!title.valid">Create</button>
 
 
 <ng-template #valid>
