--- a/src/app/items/items-list/items-list.component.html
+++ b/src/app/items/items-list/items-list.component.html
@@ -1,5 +1,7 @@
 <h1>Items</h1>
 
+<p>This page is a demo of a very basic todo list in Angular, using the Firebase Realtime DB on the backend.</p>
+
 <div *ngFor="let item of items | async" class="card">
   <item-detail [item]='item'></item-detail>
 </div>
