--- a/src/app/ui/readme-page/readme-page.component.html
+++ b/src/app/ui/readme-page/readme-page.component.html
@@ -1,7 +1,7 @@
 <h1><a id="FireStarter__Angular4__Firebase_Starter_App_0"></a>FireStarter - Angular4 + Firebase Starter App</h1>
 <p>FireStarter is designed to handle the basic features most Angular+Firebase apps need. It can serve as a foundation to quickly roll out more complex features.</p>
-<p><a href="https://firestarter-96e46.firebaseapp.com/">Live Demo</a><br>
-<a href="https://angularfirebase.com">Lessons and Screencasts</a></p>
+<p><a href="https://angularfirebase.com">Lessons and Screencasts</a></p>
+<p><a href="https://join.slack.com/angularfirebase/shared_invite/MjA2NTgxMTI0MTk2LTE0OTg4NTQ4MDAtMjhhZDIzMjc0Mg">Let's talk about Angular+Firebase on Slack</a></p>
 <h2><a id="Features_7"></a>Features</h2>
 <ul>
 <li>Authentication w/ Router Guard</li>
@@ -10,36 +10,17 @@
 <li>SASS + Bulma + FontAwesome</li>
 <li>Reactive Form Validation</li>
 </ul>
-<h2><a id="Usage_15"></a>Usage</h2>
-<p>Create an account at <a href="https://firebase.google.com/">https://firebase.google.com/</a></p>
-<ul>
-<li><code>git clone https://github.com/codediodeio/angular-firestarter.git firestarter</code></li>
-<li><code>cd firestarter</code></li>
-<li><code>npm install</code></li>
-</ul>
-<p>Create the environment files below in <code>src/environments/</code>.</p>
-<h4><a id="environmentts_25"></a>environment.ts</h4>
-<pre><code class="language-typescript"><span class="hljs-keyword">export</span> <span class="hljs-keyword">const</span> environment = {{'{'}}
-  production: <span class="hljs-literal">false</span>,
-  firebaseConfig: {{'{'}}
-    apiKey: <span class="hljs-string">"APIKEY"</span>,
-    authDomain: <span class="hljs-string">"DEV-APP.firebaseapp.com"</span>,
-    databaseURL: <span class="hljs-string">"https://DEV-APP.firebaseio.com"</span>,
-    storageBucket: <span class="hljs-string">"DEV-APP.appspot.com"</span>
-  {{'}'}}
-{{'}'}};
-</code></pre>
-<h4><a id="environmentprodts_34"></a>environment.prod.ts</h4>
-<pre><code class="language-typescript"><span class="hljs-keyword">export</span> <span class="hljs-keyword">const</span> environment = {{'{'}}
-  production: <span class="hljs-literal">true</span>,
-  firebaseConfig: {{'{'}}
-    <span class="hljs-comment">// same as above, or use a different firebase project to isolate environments</span>
-  {{'}'}}
-{{'}'}};
-</code></pre>
-<p>And finally <code>ng serve</code></p>
+
+<h2>Installation</h2>
+
+Get the latest Firestarter build on <a href="https://github.com/codediodeio/angular-firestarter">Github</a>
+
+<p>More Live Demos</p>
 <h2><a id="Apps_Using_FireStarter_in_Production_49"></a>Apps Using FireStarter in Production</h2>
 <ul>
 <li><a href="https://app.artifilter.com">ArtiFilter</a> - Neural Art Generator</li>
 <li><a href="https://flashlawyer.com">FlashLawyer</a> - Legal Document Builder and Chatbot</li>
 </ul>
+
+
+<a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 999999;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
