style: frontend style improvements

--- a/src/app/ui/footer-nav/footer-nav.component.html
+++ b/src/app/ui/footer-nav/footer-nav.component.html
@@ -1,3 +1,5 @@
 <footer class="footer">
-    Angular 4 + Firebase Starter App -- Build me from scratch at <a href="https://angularfirebase.com">AngularFirebase</a>
+    Angular + Firebase PWA Starter App <br>
+    Build me from scratch at <a href="https://angularfirebase.com">AngularFirebase.com</a><br>
+    <br>Open Source | MIT License | Created by <a href="https://jeffdelaney.me">Jeff Delaney</a>
 </footer>
