--- a/src/app/items/item-detail/item-detail.component.scss
+++ b/src/app/items/item-detail/item-detail.component.scss
@@ -1,2 +1,2 @@
-.button { border-radius: 0; margin: 10px 5px; }
+.button { border-radius: 0; margin: 10px 5px; text-transform: uppercase; font-weight: bold; }
 .strike-out { text-decoration: line-through; color: darkred; }
