--- a/src/app/ui/readme-page/readme-page.component.html
+++ b/src/app/ui/readme-page/readme-page.component.html
@@ -1,25 +1,23 @@
-<h1><a id="FireStarter__Angular4__Firebase_Starter_App_0"></a>FireStarter - Angular4 + Firebase Starter App</h1>
-<p>FireStarter is designed to handle the basic features most Angular+Firebase apps need. It can serve as a foundation to quickly roll out more complex features.</p>
-<p><a href="https://angularfirebase.com">Lessons and Screencasts</a></p>
-<p><a href="https://join.slack.com/angularfirebase/shared_invite/MjA2NTgxMTI0MTk2LTE0OTg4NTQ4MDAtMjhhZDIzMjc0Mg">Let's talk about Angular+Firebase on Slack</a></p>
-<h2><a id="Features_7"></a>Features</h2>
-<ul>
-<li>Authentication w/ Router Guard</li>
-<li>Realtime Database CRUD Demo</li>
-<li>File Uploads to Firebase Storage Demo</li>
-<li>SASS + Bulma + FontAwesome</li>
-<li>Reactive Form Validation</li>
-</ul>
+<h1>Welcome to Firestarter!</h1>
 
-<h2>Installation</h2>
+<p>I am a Progressive Web App (PWA) built with Angular and Firebase.</p>
 
-Get the latest Firestarter build on <a href="https://github.com/codediodeio/angular-firestarter">Github</a>
+<h2>Have Questions?</h2>
 
-<h2><a id="Apps_Using_FireStarter_in_Production_49"></a>Apps Using FireStarter in Production</h2>
-<ul>
-<li><a href="https://app.artifilter.com">ArtiFilter</a> - Neural Art Generator</li>
-<li><a href="https://flashlawyer.com">FlashLawyer</a> - Legal Document Builder and Chatbot</li>
-</ul>
+<p>
+    <i class="fa fa-slack fa-lg"></i> Let's talk on the <a target="blank" href="https://join.slack.com/angularfirebase/shared_invite/MjA2NTgxMTI0MTk2LTE0OTg4NTQ4MDAtMjhhZDIzMjc0Mg">
+    Angular Firebase Developers Slack Team
+</a>
+</p>
 
+<h2>Free Open Source Screencasts</h2>
 
-<a href="https://github.com/codediodeio/angular-firestarter"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 999999;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+<p>
+    <i class="fa fa-youtube fa-lg"></i>
+    Subscribe to the <a href="https://www.youtube.com/channel/UCsBjURrPoezykLs9EqgamOA">AngularFirebase YouTube Channel</a> for weekly lessons.
+</p>
+
+<div class="videoWrapper">
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UiE5URyyr80" frameborder="0" allowfullscreen></iframe>
+</div>
