--- a/src/app/ui/top-nav/top-nav.component.html
+++ b/src/app/ui/top-nav/top-nav.component.html
@@ -1,25 +1,7 @@
 <nav class="nav">
   <div class="nav-left">
-    <a class="nav-item" routerLink="/">
+    <a class="nav-item logo" routerLink="/">
       <img src="assets/images/angularfirebase.png" width="30px" alt="Firestarter Angular4 Demo App"/> FireStarter
-    </a>
-  </div>
-
-  <div class="nav-center">
-    <a class="nav-item" href="https://github.com/codediodeio/angular-firestarter">
-      <span class="icon">
-        <i class="fa fa-github"></i>
-      </span>
-    </a>
-    <a class="nav-item" href="https://www.youtube.com/channel/UCsBjURrPoezykLs9EqgamOA">
-      <span class="icon">
-        <i class="fa fa-youtube"></i>
-      </span>
-    </a>
-    <a class="nav-item" href="https://twitter.com/angularfirebase">
-      <span class="icon">
-        <i class="fa fa-twitter"></i>
-      </span>
     </a>
   </div>
 
@@ -38,23 +20,11 @@
       Login
     </a>
     <a class="nav-item" routerLink="/items">
-      Items
+      CRUD Demo
     </a>
     <a class="nav-item" routerLink="/uploads">
-      Uploads
+      File Upload Demo
     </a>
-
-    <div class="nav-item">
-      <div class="field is-grouped">
-        <p class="control">
-          <a class="button is-primary" href="https://angularfirebase.com">
-            <span class="icon">
-              <i class="fa fa-code"></i>
-            </span>
-            <span>Build Me</span>
-          </a>
-        </p>
-      </div>
-    </div>
   </div>
+
 </nav>
