--- a/src/styles/firestarter.scss
+++ b/src/styles/firestarter.scss
@@ -1,22 +1,73 @@
 @import 'variables';
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Palanquin|Source+Sans+Pro');
 
 
 
 ///// Content
 
+$body-font: 'Source Sans Pro', sans-serif;
+$heading-font: 'Palanquin', sans-serif;
+
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: $body-font;
 }
 
+h1, h2, h3, h4, h5, h6, {
+  font-family: $heading-font;
+}
 
+a {
+  color: #1c90f3;
+  font-weight: bold;
+  &:hover {
+    color: darken(#1c90f3, 10%)
+  }
+}
+
+#wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.content {
+    // min-height: 70vh;
+    padding: 2vw;
+    flex: 1
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.logo {
+  font-size: 1.2em;
+  font-weight: bold;
+  font-family: $heading-font;
+  color: #1D262F;
+  img { 
+    margin-right: 5px;
+  }
+}
+  
 .footer {
-  // flex: 1;
-  border-top: 1px solid $gray-lightest;
-  // padding: 40px;
+  border-top: 2px solid $gray-lightest;
   min-height: 100px;
   text-align: center;
+  font-size: 0.9em;
+  background: #f9f9f9;
 }
+
 
 .text-truncate {
   white-space: nowrap;
@@ -29,6 +80,7 @@ body {
   margin-top: 5px;
 }
 
+
 ///// Social Buttons
 
 .input {
@@ -37,6 +89,9 @@ body {
 
 .btn-social {
   color: #fff;
+  i {
+    margin-right: 5px;
+  }
   &:hover {
     color: #fff;
     box-shadow: 0 14px 26px -12px rgba(0, 0, 0, 0.2), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.1);
