--- a/src/app/ui/user-form/user-form.component.html
+++ b/src/app/ui/user-form/user-form.component.html
@@ -1,21 +1,25 @@
-
-<form [formGroup]="userForm"  *ngIf="newUser"  (ngSubmit)="signup()">
+<form [formGroup]="userForm" *ngIf="newUser" (ngSubmit)="signup()">
 
   <h3>New User Signup</h3>
   <p class="button is-small" (click)="toggleForm()">Already Registered?</p>
   <hr>
 
   <label for="email">Email</label>
-  <input type="email" id="email" class="input"
-         formControlName="email" required >
+  <input type="email" id="email" class="input" formControlName="email" required>
 
   <div *ngIf="formErrors.email" class="notification is-danger">
     {{ formErrors.email }}
   </div>
 
+  <label for="displayName">Name</label>
+  <input type="text" id="displayName" class="input" formControlName="displayName" required>
+
+  <div *ngIf="formErrors.displayName" class="notification is-danger">
+    {{ formErrors.displayName }}
+  </div>
+
   <label for="password">Password</label>
-  <input type="password" id="password" class="input"
-         formControlName="password" required >
+  <input type="password" id="password" class="input" formControlName="password" required>
 
   <div *ngIf="formErrors.password" class="notification is-danger">
     {{ formErrors.password }}
@@ -30,23 +34,21 @@
 </form>
 
 
-<form [formGroup]="userForm"  *ngIf="!newUser"  (ngSubmit)="login()">
+<form [formGroup]="userForm" *ngIf="!newUser" (ngSubmit)="login()">
 
   <h3>Existing User Login</h3>
   <p class="btn button is-small" (click)="toggleForm()">New User?</p>
   <hr>
 
   <label for="email">Email</label>
-  <input type="email" id="email" class="input"
-         formControlName="email" required >
+  <input type="email" id="email" class="input" formControlName="email" required>
 
   <div *ngIf="formErrors.email" class="help is-danger">
     {{ formErrors.email }}
   </div>
 
   <label for="password">Password</label>
-  <input type="password" id="password" class="input"
-         formControlName="password" required >
+  <input type="password" id="password" class="input" formControlName="password" required>
 
   <div *ngIf="formErrors.password" class="help is-danger">
     {{ formErrors.password }}
