--- a/src/app/ui/top-nav/top-nav.component.html
+++ b/src/app/ui/top-nav/top-nav.component.html
@@ -19,11 +19,14 @@
     <a class="nav-item" routerLink="/login">
       Login
     </a>
+    <a class="nav-item" routerLink="/notes">
+      Firestore
+    </a>
     <a class="nav-item" routerLink="/items">
-      CRUD Demo
+      Realtime DB
     </a>
     <a class="nav-item" routerLink="/uploads">
-      File Upload Demo
+      File Uploads
     </a>
   </div>
 
