fix: rework firestore demo

--- a/src/app/notes/note-detail/note-detail.component.html
+++ b/src/app/notes/note-detail/note-detail.component.html
@@ -1,17 +1,11 @@
-<div *ngIf="note | async as n">
-
-  <div class="card-content">
-
-    <h3>{{ n.content }}</h3>
-
-  </div>
+<div>
+    <h3>{{ note.content }}</h3>
 
 
-    <span class="button is-small is-info" (click)='addHeartToNote(n.hearts)'>
+    <span class="button is-small is-info" (click)='addHeartToNote(note.hearts)'>
       Heart <i class="fa fa-heart"></i>
     </span>
-    <span class="button is-small is-danger" (click)='deleteNote()'>Delete</span>
+    <span class="button is-small is-danger" (click)='deleteNote(note.id)'>Delete</span>
 
-    <p>This note has been hearted {{ n.hearts || 0 }} times.</p>
-<hr>
-</div>
+    <p>This note has been hearted {{ note.hearts || 0 }} times.</p>
+  </div>
