--- a/src/app/notes/notes-list/notes-list.component.html
+++ b/src/app/notes/notes-list/notes-list.component.html
@@ -1,12 +1,15 @@
 <h1>Firestore Notes</h1>
 <p>This is a very basic demo of the Firestore database.</p>
 
-<div *ngFor="let note of notes | async">
-  <note-detail [noteId]="note.id"></note-detail>
-</div>
-
 <input [(ngModel)]="content" placeholder="Add your own note" class="input">
+
+
 <button class="button is-success" (click)="createNote()" [disabled]="content?.length < 2 || content?.length > 200">
   Add Note
 </button>
+<hr>
+<div *ngFor="let note of notes | async">
+  <note-detail [note]="note"></note-detail>
+</div>
+
 
