--- a/src/app/ui/user-login/user-login.component.html
+++ b/src/app/ui/user-login/user-login.component.html
@@ -1,13 +1,13 @@
-<div *ngIf="!auth.currentUser; else alreadyLoggedIn">
+<div *ngIf="!(auth.user | async); else alreadyLoggedIn">
 
   <h3>Social Login</h3>
 
 
     <button (click)="signInWithGoogle()" class="button btn-social btn-google">
-      <i class="fa fa-google-plus fa-lg"></i> Connect Google
+      <i class="fa fa-google fa-lg"></i> Connect Google
     </button>
 
-    <button (click)="signInWithGithub()" class="button btn-social btn-github" disabled>
+    <!-- <button (click)="signInWithGithub()" class="button btn-social btn-github" disabled>
       <i class="fa fa-github fa-lg"></i> Connect GitHub
     </button>
 
@@ -30,7 +30,7 @@
     <hr>
 
 
-    <user-form></user-form>
+    <user-form></user-form> -->
 
 </div>
 
