upgrade: firestore auth + angular 5

--- a/src/app/ui/user-login/user-login.component.html
+++ b/src/app/ui/user-login/user-login.component.html
@@ -7,7 +7,7 @@
       <i class="fa fa-google fa-lg"></i> Connect Google
     </button>
 
-    <!-- <button (click)="signInWithGithub()" class="button btn-social btn-github" disabled>
+    <button (click)="signInWithGithub()" class="button btn-social btn-github" disabled>
       <i class="fa fa-github fa-lg"></i> Connect GitHub
     </button>
 
@@ -30,7 +30,7 @@
     <hr>
 
 
-    <user-form></user-form> -->
+    <user-form></user-form>
 
 </div>
 
