--- a/src/app/uploads/upload-detail/upload-detail.component.html
+++ b/src/app/uploads/upload-detail/upload-detail.component.html
@@ -1,2 +1,2 @@
 <strong>{{upload.name}}</strong>
-<button (click)='deleteUpload(upload)' class="button is-danger is-small">Delete</button><br>
+<button (click)='deleteUpload()' class="button is-danger is-small">Delete</button><br>
