--- a/src/app/items/item-detail/item-detail.component.scss
+++ b/src/app/items/item-detail/item-detail.component.scss
@@ -1,2 +1,11 @@
-.button { border-radius: 0; margin: 10px 5px; text-transform: uppercase; font-weight: bold; }
-.strike-out { text-decoration: line-through; color: darkred; }
+.button {
+  border-radius: 0;
+  margin: 10px 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.strike-out {
+  text-decoration: line-through;
+  color: darkred;
+}
