--- a/src/app/notes/note-detail/note-detail.component.scss
+++ b/src/app/notes/note-detail/note-detail.component.scss
@@ -1,2 +1,10 @@
-i { margin-left: 5px; }
-.button { border-radius: 0; margin: 10px 5px; text-transform: uppercase; font-weight: bold; }
+i {
+  margin-left: 5px; 
+}
+
+.button {
+  border-radius: 0;
+  margin: 10px 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
