upgrade: full migration to ng6

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,23 @@
 
   <div class="content columns">
     <aside class="column is-2 is-offset-1">
-      <!-- <user-profile></user-profile> -->
+      <user-profile></user-profile>
     </aside>
 
     <main class="column is-8">
-      <!-- <notification-message></notification-message> -->
+      <notification-message></notification-message>
 
       <router-outlet></router-outlet>
     </main>
   </div>
+
+
+  <footer class="footer">
+    Angular v6.x + Firebase PWA Starter App <br>
+    Build me from scratch at <a href="https://angularfirebase.com">AngularFirebase.com</a><br>
+    <br>Open Source | MIT License | Created by <a href="https://jeffdelaney.me">Jeff Delaney</a>
+  </footer>
+
 
   <div class="github-banner" style="z-index: 9999999">
     <a href="https://github.com/codediodeio/angular-firestarter" class="github-corner" aria-label="View source on Github">
