--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, {
   font-family: $heading-font;
+  font-weight: 300 !important;
 }
 
 a {
@@ -168,5 +169,9 @@ app-root:empty + .loading {
     margin-bottom: 50px;
   }
 }
+
+.button { margin-right: 5px; }
+
+
 
   
